# world-cup-ml-simulator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: model_config.yaml  team_name_map.yaml  tournament_2026.yaml
docs/screenshots/: .gitkeep
notebooks/: 01_data_audit.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_simulation_analysis.ipynb
reports/: backtesting_report.md  baseline_metrics.json  evaluation_report.md
reports/backtesting/: backtest_metrics.json  predictions_2014.csv  predictions_2018.csv  predictions_2022.csv
reports/metrics/: model_metrics.json
reports/simulation/: tournament_probabilities.csv  tournament_summary.json
scripts/: audit_data.py  build_features.py  build_matches.py  generate_evaluation_report.py  run_backtest.py  run_simulation.py  train_baselines.py  train_model.py
src/worldcup/: __init__.py  backtesting.py  config.py  timing.py
src/worldcup/data/: __init__.py  clean_data.py  load_data.py  team_names.py  validate_data.py
src/worldcup/features/: __init__.py  build_features.py  rating_features.py  rolling_features.py
src/worldcup/models/: __init__.py  baseline.py  calibrate.py  evaluate.py  train.py
src/worldcup/simulation/: __init__.py  group_stage.py  knockout.py  tiebreakers.py  tournament.py
src/worldcup/visualization/: __init__.py  plots.py
tests/: conftest.py  test_backtesting.py  test_data_ingestion.py  test_data_validation.py  test_evaluation.py  test_feature_pipeline.py  test_features.py  test_fixtures.py  test_group_stage.py  test_knockout.py  test_model_training.py  test_modeling_dataset.py  test_models.py  test_monte_carlo.py  test_rating_features.py  test_simulation.py  test_team_names.py  test_timing.py  test_tournament_config.py
tests/fixtures/: raw_matches_sample.csv  sample_results.csv
