[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldcup"
version = "0.1.0"
description = "Predict 2026 FIFA World Cup match probabilities and simulate the tournament via Monte Carlo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Colby Threlkeld" }]
keywords = ["football", "soccer", "world-cup", "machine-learning", "monte-carlo", "forecasting"]
# Core pipeline only — everything needed to build data, train, evaluate, and
# simulate on a headless CPU VM. Deliberately lean: no GPU/boosting libraries and
# no Streamlit (the dashboard is an optional extra), so a compute-only box stays
# small and cheap to provision.
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15.0",          # parquet engine for the interim/processed tables
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "matplotlib>=3.8",        # report figures (Agg backend; no GUI)
]

[project.optional-dependencies]
# Streamlit dashboard — only needed to host the app, not to run the pipeline.
app = ["streamlit>=1.33"]
# Gradient-boosted models — added only if they beat the simpler baselines.
boost = ["xgboost>=2.0", "lightgbm>=4.3"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "types-PyYAML",
  "pandas-stubs",
  "streamlit>=1.33",        # so `make app` works after `make install`
]

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import sort, B: bugbear, UP: pyupgrade,
# N: naming, SIM: simplify, D: docstrings.
select = ["E", "F", "I", "B", "UP", "N", "SIM", "D"]
ignore = ["D203", "D213"]  # mutually exclusive with D211/D212 — pick one of each pair.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]       # tests document themselves via names.
"notebooks/*" = ["D"]
"app/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["worldcup"]
strict = true
warn_unused_configs = true
ignore_missing_imports = true   # third-party libs without stubs (streamlit, etc.)

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]   # run tests without an editable install if needed.
